--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 </head>
 <body>
   <nav>
-    <h1>Arjun Dahal</h1>
+    <a href="index.html">Arjun Dahal</a>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="research.html">Research</a></li>
       <li><a href="publications.html">Publications</a></li>
-      <li><a href="blog.html">Blog</a></li>
       <li><a href="cv.html">CV</a></li>
     </ul>
   </nav>
@@ -43,16 +42,27 @@
       </ul>
     </div>
   </main>
-
   <footer>
-    <p>Contact:</p>
-    <ul>
-      <li>Email: <a href="mailto:axd5000@mavs.uta.edu">axd5000@mavs.uta.edu</a></li>
-      <li><a href="https://github.com/ajdahal"><img src="img/github.svg" alt="GitHub"></a></li>
-      <li><a href="https://www.linkedin.com/in/arjdahal/"><img src="img/linkedin.svg" alt="LinkedIn"></a></li>
-      <li><a href="https://scholar.google.com/citations?hl=en&user=fI9pyVIAAAAJ"><img src="img/googlescholar.svg" alt="Google Scholar"></a></li>
-    </ul>
+    <div style="display: flex; align-items: center; justify-content: center; margin-top: 20px;">
+      <!-- Email -->
+      <span style="font-weight: bold; margin-right: 10px;">Email:</span>
+      <a href="mailto:axd5000@mavs.uta.edu" style="text-decoration: none; color: black; margin-right: 50px;">axd5000@mavs.uta.edu</a>
+  
+      <!-- LinkedIn -->
+      <a href="https://www.linkedin.com/in/arjdahal/" style="margin-right: 20px;">
+        <img src="img/linkedin.png" alt="LinkedIn" style="width: 24px; height: 24px; vertical-align: middle;">
+      </a>
+  
+      <!-- GitHub -->
+      <a href="https://github.com/ajdahal" style="margin-right: 20px;">
+        <img src="img/github.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle;">
+      </a>
+  
+      <!-- Google Scholar -->
+      <a href="https://scholar.google.com/citations?hl=en&user=fI9pyVIAAAAJ">
+        <img src="img/googlescholar.png" alt="Google Scholar" style="width: 24px; height: 24px; vertical-align: middle;">
+      </a>
+    </div>
   </footer>
-  <script src="js/script.js"></script>
 </body>
 </html>
