--- a/research.html
+++ b/research.html
@@ -27,13 +27,19 @@
   </main>
 
   <footer>
-    <p>Contact:</p>
-    <ul>
-      <li>Email: <a href="mailto:axd5000@mavs.uta.edu">axd5000@mavs.uta.edu</a></li>
-      <li><a href="https://github.com/ajdahal"><img src="img/github.png" alt="GitHub"></a></li>
-      <li><a href="https://www.linkedin.com/in/arjdahal/"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
-      <li><a href="https://scholar.google.com/citations?hl=en&user=fI9pyVIAAAAJ"><img src="img/googlescholar.png" alt="Google Scholar"></a></li>
-    </ul>
+    <div style="display: flex; align-items: center; justify-content: center; margin-top: 20px;">
+      <span style="font-weight: bold; margin-right: 10px;">Email:</span>
+      <a href="mailto:axd5000@mavs.uta.edu" style="text-decoration: none; color: black; margin-right: 50px;">axd5000@mavs.uta.edu</a>
+      <a href="https://www.linkedin.com/in/arjdahal/" style="margin-right: 20px;">
+        <img src="img/linkedin.png" alt="LinkedIn" style="width: 24px; height: 24px; vertical-align: middle;">
+      </a>
+      <a href="https://github.com/ajdahal" style="margin-right: 20px;">
+        <img src="img/github.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle;">
+      </a>
+      <a href="https://scholar.google.com/citations?hl=en&user=fI9pyVIAAAAJ">
+        <img src="img/googlescholar.png" alt="Google Scholar" style="width: 24px; height: 24px; vertical-align: middle;">
+      </a>
+    </div>
   </footer>
 </body>
 </html>
