--- a/index.html
+++ b/index.html
@@ -34,30 +34,31 @@
     <h2>News</h2>
     <div class="news-scroll">
       <ul>
-        <li><strong>Oct 2024:</strong> Serving as a reviewer for ICLR 2024.</li>
-        <li><strong>Dec 2023:</strong> Presented poster at NeurIPS 2023 in New Orleans, LA.</li>
-        <li><strong>Sep 2023:</strong> Paper accepted at NeurIPS 2023.</li>
-        <li><strong>May 2022:</strong> Passed Ph.D. qualifying exam.</li>
-        <li><strong>Dec 2021:</strong> Volunteered at NeurIPS 2021.</li>
+        <li><strong>Oct 2024:</strong></li>
+        <li><strong>Dec 2023:</strong></li>
+        <li><strong>Sep 2023:</strong></li>
+        <li><strong>May 2022:</strong></li>
+        <li><strong>Dec 2021:</strong></li>
       </ul>
     </div>
   </main>
+
   <footer>
     <div style="display: flex; align-items: center; justify-content: center; margin-top: 20px;">
       <!-- Email -->
       <span style="font-weight: bold; margin-right: 10px;">Email:</span>
       <a href="mailto:axd5000@mavs.uta.edu" style="text-decoration: none; color: black; margin-right: 50px;">axd5000@mavs.uta.edu</a>
-  
+
       <!-- LinkedIn -->
       <a href="https://www.linkedin.com/in/arjdahal/" style="margin-right: 20px;">
         <img src="img/linkedin.png" alt="LinkedIn" style="width: 24px; height: 24px; vertical-align: middle;">
       </a>
-  
+
       <!-- GitHub -->
       <a href="https://github.com/ajdahal" style="margin-right: 20px;">
         <img src="img/github.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle;">
       </a>
-  
+
       <!-- Google Scholar -->
       <a href="https://scholar.google.com/citations?hl=en&user=fI9pyVIAAAAJ">
         <img src="img/googlescholar.png" alt="Google Scholar" style="width: 24px; height: 24px; vertical-align: middle;">
