--- a/publications.html
+++ b/publications.html
@@ -8,34 +8,35 @@
 </head>
 <body>
   <nav>
-    <h1>Arjun Dahal</h1>
+    <a href="index.html">Arjun Dahal</a>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="research.html">Research</a></li>
       <li><a href="publications.html">Publications</a></li>
-      <li><a href="blog.html">Blog</a></li>
       <li><a href="cv.html">CV</a></li>
     </ul>
   </nav>
 
   <main>
     <h2>Publications</h2>
-    <ul>
-      <li>
-        <strong>Nepali Speech Recognition Using RNN-CTC Model</strong><br>
-        <em>International Journal of Computer Applications, 2019</em><br>
-        <a href="https://www.researchgate.net/publication/334523238_Nepali_Speech_Recognition_using_RNN-CTC_Model">Read Publication</a>
-      </li>
-    </ul>
+    <p><strong>Nepali Speech Recognition Using RNN-CTC Model</strong></p>
+    <p><em>International Journal of Computer Applications, 2019</em></p>
+    <a href="https://www.researchgate.net/publication/334523238_Nepali_Speech_Recognition_using_RNN-CTC_Model">Read Publication</a>
   </main>
 
   <footer>
-    <p>Contact:</p>
-    <ul>
-      <li>Email: <a href="mailto:axd5000@mavs.uta.edu">axd5000@mavs.uta.edu</a></li>
-      <li><a href="https://github.com/ajdahal"><img src="img/github.svg" alt="GitHub"></a></li>
-      <li><a href="https://www.linkedin.com/in/arjdahal/"><img src="img/linkedin.svg" alt="LinkedIn"></a></li>
-      <li><a href="https://scholar.google.com/citations?hl=en&user=fI9pyVIAAAAJ"><img src="img/googlescholar.svg" alt="Google Scholar"></a></li>
-    </ul>
+    <div style="display: flex; align-items: center; justify-content: center; margin-top: 20px;">
+      <span style="font-weight: bold; margin-right: 10px;">Email:</span>
+      <a href="mailto:axd5000@mavs.uta.edu" style="text-decoration: none; color: black; margin-right: 50px;">axd5000@mavs.uta.edu</a>
+      <a href="https://www.linkedin.com/in/arjdahal/" style="margin-right: 20px;">
+        <img src="img/linkedin.png" alt="LinkedIn" style="width: 24px; height: 24px; vertical-align: middle;">
+      </a>
+      <a href="https://github.com/ajdahal" style="margin-right: 20px;">
+        <img src="img/github.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle;">
+      </a>
+      <a href="https://scholar.google.com/citations?hl=en&user=fI9pyVIAAAAJ">
+        <img src="img/googlescholar.png" alt="Google Scholar" style="width: 24px; height: 24px; vertical-align: middle;">
+      </a>
+    </div>
   </footer>
 </body>
 </html>
