--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">Arjun Dahal</a>
+    <div class="nav-title">Arjun Dahal</div>
     <ul>
       <li><a href="research.html">Research</a></li>
       <li><a href="publications.html">Publications</a></li>
@@ -34,36 +34,26 @@
     <h2>News</h2>
     <div class="news-scroll">
       <ul>
-        <li><strong>Oct 2024:</strong></li>
-        <li><strong>Dec 2023:</strong></li>
-        <li><strong>Sep 2023:</strong></li>
-        <li><strong>May 2022:</strong></li>
-        <li><strong>Dec 2021:</strong></li>
+        <li><strong>Aug 2022:</strong> Started PHD in Computer Science at University of Texas, Arlington </li>
       </ul>
     </div>
   </main>
 
-  <footer>
-    <div style="display: flex; align-items: center; justify-content: center; margin-top: 20px;">
-      <!-- Email -->
-      <span style="font-weight: bold; margin-right: 10px;">Email:</span>
-      <a href="mailto:axd5000@mavs.uta.edu" style="text-decoration: none; color: black; margin-right: 50px;">axd5000@mavs.uta.edu</a>
+  <div class="contact">
+    <span><strong>Email:</strong></span>
+    <a href="mailto:axd5000@mavs.uta.edu">axd5000@mavs.uta.edu</a>
 
-      <!-- LinkedIn -->
-      <a href="https://www.linkedin.com/in/arjdahal/" style="margin-right: 20px;">
-        <img src="img/linkedin.png" alt="LinkedIn" style="width: 24px; height: 24px; vertical-align: middle;">
-      </a>
+    <a href="https://www.linkedin.com/in/arjdahal/">
+      <img src="img/linkedin.png" alt="LinkedIn">
+    </a>
 
-      <!-- GitHub -->
-      <a href="https://github.com/ajdahal" style="margin-right: 20px;">
-        <img src="img/github.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle;">
-      </a>
+    <a href="https://github.com/ajdahal">
+      <img src="img/github.png" alt="GitHub">
+    </a>
 
-      <!-- Google Scholar -->
-      <a href="https://scholar.google.com/citations?hl=en&user=fI9pyVIAAAAJ">
-        <img src="img/googlescholar.png" alt="Google Scholar" style="width: 24px; height: 24px; vertical-align: middle;">
-      </a>
-    </div>
-  </footer>
+    <a href="https://scholar.google.com/citations?hl=en&user=fI9pyVIAAAAJ">
+      <img src="img/googlescholar.png" alt="Google Scholar">
+    </a>
+  </div>
 </body>
 </html>
