--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
     <a href="mailto:axd5000@mavs.uta.edu">axd5000@mavs.uta.edu</a>
 
     <a href="https://www.linkedin.com/in/arjdahal/">
-      <img src="img/linkedin.png" alt="LinkedIn">
+      <img src="img/linkedin.svg" alt="LinkedIn">
     </a>
 
     <a href="https://github.com/ajdahal">
-      <img src="img/github.png" alt="GitHub">
+      <img src="img/github.svg" alt="GitHub">
     </a>
 
     <a href="https://scholar.google.com/citations?hl=en&user=fI9pyVIAAAAJ">
-      <img src="img/googlescholar.png" alt="Google Scholar">
+      <img src="img/googlescholar.svg" alt="Google Scholar">
     </a>
   </div>
 </body>
