--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <nav>
-    <div class="nav-title">Arjun Dahal</div>
-    <ul>
-      <li><a href="research.html">Research</a></li>
-      <li><a href="publications.html">Publications</a></li>
-      <li><a href="cv.html">CV</a></li>
-    </ul>
-  </nav>
+    <nav>
+        <a href="index.html" class="nav-title">Arjun Dahal</a>
+        <ul>
+          <li><a href="research.html">Research</a></li>
+          <li><a href="publications.html">Publications</a></li>
+          <li><a href="cv.html">CV</a></li>
+        </ul>
+      </nav>
 
   <header>
     <div class="profile">
