commit_fairness_testing_added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           I am a Ph.D. student in Computer Science & Engineering at the University of Texas at Arlington. 
           My research focuses on Testing Machine Learning Models and Explainable Artificial Intelligence.
         </p>
-        <p><strong>Interests:</strong> XAI, Fairness Testing, Generative AI</p>
+        <p><strong>Research Interests:</strong> XAI, Fairness Testing, Generative AI</p>
       </div>
     </div>
   </header>
