--- a/research.html
+++ b/research.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">Arjun Dahal</a>
+    <a href="index.html" class="nav-title">Arjun Dahal</a>
     <ul>
       <li><a href="research.html">Research</a></li>
       <li><a href="publications.html">Publications</a></li>
@@ -16,15 +16,12 @@
     </ul>
   </nav>
 
-  <main>
+  <main class="research-content">
     <h2>Research</h2>
     <p>My research focuses on:</p>
     <ul>
-      <li>Explainable Artificial Intelligence (XAI)</li>
-      <li>Fairness Testing in Machine Learning Models</li>
-      <li>Generative AI Techniques</li>
+      <li><a href="fairness_testing.html">Fairness Testing</a></li>
     </ul>
   </main>
-
 </body>
 </html>
