--- a/publications.html
+++ b/publications.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">Arjun Dahal</a>
+    <a href="index.html" class="nav-title">Arjun Dahal</a>
     <ul>
       <li><a href="research.html">Research</a></li>
       <li><a href="publications.html">Publications</a></li>
@@ -16,12 +16,13 @@
     </ul>
   </nav>
 
-  <main>
+  <main class="content">
     <h2>Publications</h2>
-    <p><strong>Nepali Speech Recognition Using RNN-CTC Model</strong></p>
-    <p><em>International Journal of Computer Applications, 2019</em></p>
-    <a href="https://www.researchgate.net/publication/334523238_Nepali_Speech_Recognition_using_RNN-CTC_Model">Read Publication</a>
+    <div class="publication">
+      <p><strong>Nepali Speech Recognition Using RNN-CTC Model</strong></p>
+      <p><em>International Journal of Computer Applications, 2019</em></p>
+      <a href="https://www.researchgate.net/publication/334523238_Nepali_Speech_Recognition_using_RNN-CTC_Model">Read Publication</a>
+    </div>
   </main>
-
 </body>
 </html>
