Final_Commit_For_The_day

--- a/publications.html
+++ b/publications.html
@@ -17,12 +17,13 @@
   </nav>
 
   <main class="content">
-    <h2>Publications</h2>
-    <div class="publication">
-      <p><strong>Nepali Speech Recognition Using RNN-CTC Model</strong></p>
-      <p><em>International Journal of Computer Applications, 2019</em></p>
-      <a href="https://www.researchgate.net/publication/334523238_Nepali_Speech_Recognition_using_RNN-CTC_Model">Read Publication</a>
-    </div>
+    <h2><strong>Publications</strong></h2>
+    <ol>
+      <li>
+        Regmi, Paribesh, Arjun Dahal, and Basanta Joshi. "Nepali speech recognition using RNN-CTC model." <em>International Journal of Computer Applications</em> 178.31 (2019): 1-6. 
+        <a href="https://www.researchgate.net/publication/334523238_Nepali_Speech_Recognition_using_RNN-CTC_Model" class="read-publication">Read Publication</a>
+      </li>
+    </ol>
   </main>
 </body>
 </html>
