--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">Arjun Dahal</a>
+    <a href="index.html" class="nav-title">Arjun Dahal</a>
     <ul>
       <li><a href="research.html">Research</a></li>
       <li><a href="publications.html">Publications</a></li>
@@ -16,10 +16,32 @@
     </ul>
   </nav>
 
-  <main>
-    <h2>Curriculum Vitae</h2>
-    <p>Download my CV: <a href="cv.pdf" download>Click Here</a></p>
-  </main>
+  <main class="content">
+    <h1>Curriculum Vitae</h1>
 
+    <section>
+        <h2>Education</h2>
+        <ol>
+          <li>
+            <h3>Ph.D. in Computer Science & Engineering</h3>
+            <p><strong>University of Texas at Arlington</strong> | Aug 2022 - Present</p>
+          </li>
+          <li>
+            <h3>Bachelor of Engineering</h3>
+            <p><strong>Institute of Engineering, Pulchowk Campus, Tribhuvan University</strong> | Sep 2018</p>
+          </li>
+        </ol>
+    </section>
+
+    <section>
+      <h2>Experience</h2>
+      <h3>Solutions Engineer</h3>
+      <p><strong>LogPoint</strong> | Dec 2018 - Aug 2022</p>
+      <ul>
+        <li>Troubleshot and debugged issues related to LogPoint's unified SIEM and SOAR solutions.</li>
+      </ul>
+    </section>
+    
+  </main>
 </body>
 </html>
