--- a/research.html
+++ b/research.html
@@ -16,12 +16,12 @@
     </ul>
   </nav>
 
-  <main class="research-content">
+  <main class="content">
     <h2>Research</h2>
     <p>My research focuses on:</p>
-    <ul>
-      <li><a href="fairness_testing.html">Fairness Testing</a></li>
-    </ul>
+    <ol>
+      <li><a href="fairness_testing.html" class="plain-link">Fairness Testing</a></li>
+    </ol>
   </main>
 </body>
 </html>
