--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <main>
     <h2>News</h2>
     <div class="news-scroll">
-        <li><strong>Aug 2022:</strong> Started PHD in Computer Science at University of Texas, Arlington </li>
+        <strong>Aug 2022:</strong> Started Ph.D. in Computer Science at University of Texas, Arlington.
     </div>
   </main>
 
