--- a/fairness_testing.html
+++ b/fairness_testing.html
@@ -12,7 +12,7 @@
 
     <section>
       <h2>Target Conference:</h2>
-      <p>2023 IEEE International Conference on Software Testing, Verification and Validation Workshops (ICSTW).</p>
+      <p> IEEE International Conference on Software Testing, Verification and Validation Workshops (ICSTW).</p>
     </section>
 
     <section>
