--- a/cv.html
+++ b/cv.html
@@ -19,28 +19,9 @@
   <main class="content">
     
     <section>
-        <h2>Education</h2>
-        <ol>
-          <li>
-            <h3>Ph.D. in Computer Science & Engineering</h3>
-            <p><strong>University of Texas at Arlington</strong> | Aug 2022 - Present</p>
-          </li>
-          <li>
-            <h3>Bachelor of Engineering</h3>
-            <p><strong>Institute of Engineering, Pulchowk Campus, Tribhuvan University</strong> | Sep 2018</p>
-          </li>
-        </ol>
+      <p>Please find my CV <a href="files/cv.pdf" download>here</a>.</p>
     </section>
-
-    <section>
-      <h2>Experience</h2>
-      <h3>Solutions Engineer</h3>
-      <p><strong>LogPoint</strong> | Dec 2018 - Aug 2022</p>
-      <ul>
-        <li>Troubleshot and debugged issues related to LogPoint's unified SIEM and SOAR solutions.</li>
-      </ul>
-    </section>
-
+    
   </main>
 </body>
 </html>
