--- a/fairness_testing.html
+++ b/fairness_testing.html
@@ -12,9 +12,20 @@
 
     <section>
       <h2>Target Conference:</h2>
-      <p> IEEE International Conference on Software Testing, Verification and Validation Workshops (ICSTW).</p>
+      <p> International Workshop on Combinatorial Testing (IWCT 2025)</p>
     </section>
 
+    <section>
+      <h2>Summary:</h2>
+      <p>Decision-making by Machine Learning (ML) models can exhibit biased behavior, resulting in unfair outcomes.<br>
+        Testing ML models for such biases is essential to ensure unbiased decision-making.<br>
+        In this work, we propose a combinatorial testing-based approach in the latent space of a generative model to generate instances
+        that assess the fairness of black-box ML models.<br>
+        Our approach involves a two-step process: generating t-way test cases in the latent space of a Variational AutoEncoder and
+        performing fairness testing using the instances reconstructed from these test cases.</p>
+    </section>
+    
+    
     <section>
       <h2>Relevant Papers:</h2>
       <ol>
@@ -29,6 +40,90 @@
         </li>
         <li>
           Wang, Zhaohui, et al. "MAFT: Efficient Model-Agnostic Fairness Testing for Deep Neural Networks via Zero-Order Gradient Search." <em>Proceedings of the IEEE/ACM 46th International Conference on Software Engineering</em>. 2024.
+        </li>
+        <li>
+          Khadka, Krishna, et al. "Synthetic data generation using combinatorial testing and variational autoencoder." 
+          <em>2023 IEEE International Conference on Software Testing, Verification and Validation Workshops (ICSTW)</em>. IEEE, 2023.
+        </li>
+        <li>
+          Patel, Ankita Ramjibhai, et al. "A combinatorial approach to fairness testing of machine learning models." 
+          <em>2022 IEEE International Conference on Software Testing, Verification and Validation Workshops (ICSTW)</em>. IEEE, 2022.
+        </li>
+        <li>
+          Kacker, Raghu N., et al. "Factorials experiments, covering arrays, and combinatorial testing." 
+          <em>Mathematics in Computer Science</em> 15 (2021): 715-739.
+        </li>
+        <li>
+          Lei, Yu, et al. "IPOG: A general strategy for t-way software testing." 
+          <em>14th Annual IEEE International Conference and Workshops on the Engineering of Computer-Based Systems (ECBS'07)</em>. IEEE, 2007.
+        </li>
+        <li>
+          Bellamy, Rachel KE, et al. "AI Fairness 360: An extensible toolkit for detecting and mitigating algorithmic bias." 
+          <em>IBM Journal of Research and Development</em> 63.4/5 (2019): 4-1.
+        </li>
+        <li>
+          Mothilal, Ramaravind K., Amit Sharma, and Chenhao Tan. "Explaining machine learning classifiers through diverse counterfactual explanations." 
+          <em>Proceedings of the 2020 Conference on Fairness, Accountability, and Transparency</em>. 2020.
+        </li>
+        <li>
+          Udeshi, Sakshi, Pryanshu Arora, and Sudipta Chattopadhyay. "Automated directed fairness testing." 
+          <em>Proceedings of the 33rd ACM/IEEE International Conference on Automated Software Engineering</em>. 2018.
+        </li>
+        <li>
+          Kingma, Diederik P., and Max Welling. "An introduction to variational autoencoders." 
+          <em>Foundations and Trends® in Machine Learning</em> 12.4 (2019): 307-392.
+        </li>
+        <li>
+          Fayyad, Usama M., and Keki B. Irani. "Multi-interval discretization of continuous-valued attributes for classification learning." 
+          <em>IJCAI</em>. Vol. 93. No. 2. 1993.
+        </li>
+        <li>
+          Ribeiro, Marco Tulio, Sameer Singh, and Carlos Guestrin. "Model-agnostic interpretability of machine learning." 
+          <em>arXiv preprint arXiv:1606.05386</em> (2016).
+        </li>
+        <li>
+          Jiang, Weipeng, et al. "Black-Box Fairness Testing with Shadow Models." 
+          <em>International Conference on Information and Communications Security</em>. Singapore: Springer Nature Singapore, 2023.
+        </li>
+        <li>
+          Fan, Ming, et al. "Explanation-guided fairness testing through genetic algorithm." 
+          <em>Proceedings of the 44th International Conference on Software Engineering</em>. 2022.
+        </li>
+        <li>
+          Zheng, Haibin, et al. "Neuronfair: Interpretable white-box fairness testing through biased neuron identification." 
+          <em>Proceedings of the 44th International Conference on Software Engineering</em>. 2022.
+        </li>
+        <li>
+          Galhotra, Sainyam, Yuriy Brun, and Alexandra Meliou. "Fairness testing: Testing software for discrimination." 
+          <em>Proceedings of the 2017 11th Joint Meeting on Foundations of Software Engineering</em>. 2017.
+        </li>
+        <li>
+          Perez Morales, Daniel, Takashi Kitamura, and Shingo Takada. "Coverage-guided fairness testing." 
+          <em>International Conference on Intelligence Science</em>. Cham: Springer International Publishing, 2021.
+        </li>
+        <li>
+          Kitamura, Takashi, Zhenjiang Zhao, and Takahisa Toda. "Applying combinatorial testing to verification-based fairness testing." 
+          <em>International Symposium on Search Based Software Engineering</em>. Cham: Springer International Publishing, 2022.
+        </li>
+        <li>
+          Yin, Ziqiang, Wentian Zhao, and Tian Song. "Boundary-Guided Black-Box Fairness Testing." 
+          <em>2024 IEEE 48th Annual Computers, Software, and Applications Conference (COMPSAC)</em>. IEEE, 2024.
+        </li>
+        <li>
+          Tao, Guanhong, et al. "RULER: Discriminative and iterative adversarial training for deep neural network fairness." 
+          <em>Proceedings of the 30th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering</em>. 2022.
+        </li>
+        <li>
+          Shahani, Aarti. "Now algorithms are deciding whom to hire, based on voice." 
+          <em>NPR All Things Considered</em> (2015).
+        </li>
+        <li>
+          Mickisch, David, et al. "Understanding the decision boundary of deep neural networks: An empirical study." 
+          <em>arXiv preprint arXiv:2002.01810</em> (2020).
+        </li>
+        <li>
+          Flores, Anthony W., Kristin Bechtel, and Christopher T. Lowenkamp. "False positives, false negatives, and false analyses: A rejoinder to machine bias: There's software used across the country to predict future criminals. And it's biased against blacks." 
+          <em>Federal Probation</em> 80 (2016): 38.
         </li>
         <li>
           John, Philips George, Deepak Vijaykeerthy, and Diptikalyan Saha. "Verifying individual fairness in machine learning models." <em>Conference on Uncertainty in Artificial Intelligence</em>. PMLR, 2020.
