--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="cv.html">CV</a></li>
         </ul>
       </nav>
-
+      
   <header>
     <div class="profile">
       <img src="img/profile.jpg" alt="Arjun Dahal">
@@ -25,13 +25,22 @@
           I am a Ph.D. student in Computer Science & Engineering at the University of Texas at Arlington. 
           My research focuses on Testing Machine Learning Models and Explainable Artificial Intelligence.
         </p>
-        <p><strong>Research Interests:</strong> XAI, Fairness Testing, Generative AI</p>
+        <p><strong>Research Interests:</strong> Testing Machine Learning Models, XAI, Generative AI</p>
       </div>
     </div>
   </header>
 
   <main>
     <h2>News</h2>
+    <div class="news-scroll">
+        <strong>Jan 2025:</strong> Paper "Fairness Testing of Machine Learning Models Using Combinatorial Testing in Latent Space" submitted to IWCT 2025 &#x1F91E;.
+    </div>
+    <div class="news-scroll">
+        <strong>Nov 2024:</strong> Completed my Comprehensive Examination.
+    </div>
+    <div class="news-scroll">
+        <strong>May 2024:</strong> Completed my Diagnostic Evaluation.
+    </div>
     <div class="news-scroll">
         <strong>Aug 2022:</strong> Started Ph.D. in Computer Science at University of Texas, Arlington.
     </div>
