--- a/cv.html
+++ b/cv.html
@@ -19,9 +19,9 @@
   <main class="content">
     
     <section>
-      <p>Please find my CV <a href="files/cv.pdf" download>here</a>.</p>
+      <p>Please find my CV <a href="files/resume_arjun.pdf" download>here</a>.</p>
     </section>
-    
+
   </main>
 </body>
 </html>
