--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <main>
     <h2>News</h2>
     <div class="news-scroll">
-        <strong>Jan 2025:</strong> Paper "Fairness Testing of Machine Learning Models Using Combinatorial Testing in Latent Space" submitted to IWCT 2025 &#x1F91E;.
+        <strong>Jan 2025:</strong> Paper "Fairness Testing of Machine Learning Models Using Combinatorial Testing in Latent Space" submitted to IWCT 2025.
     </div>
     <div class="news-scroll">
         <strong>Nov 2024:</strong> Completed my Comprehensive Examination.
