--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <div class="description">
         <h2>About Me</h2>
         <p>
-          I am a Ph.D. student in Computer Science & Engineering at the University of Texas at Arlington. 
-          My research focuses on Testing Machine Learning Models and Explainable Artificial Intelligence.
+          I am a third-year Ph.D. student in Computer Science and Engineering at the University of Texas at Arlington.
+          <em> My research focuses on Testing Machine Learning Models and Explainable Artificial Intelligence. </em>
         </p>
         <p><strong>Research Interests:</strong> Testing Machine Learning Models, XAI, Generative AI</p>
       </div>
