--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>About Me</h2>
         <p>
           I am a third-year Ph.D. student in Computer Science and Engineering at the University of Texas at Arlington.
-          <em> My research focuses on Testing Machine Learning Models and Explainable Artificial Intelligence. </em>
+          My research focuses on Testing Machine Learning Models and Explainable Artificial Intelligence.
         </p>
         <p><strong>Research Interests:</strong> Testing Machine Learning Models, XAI, Generative AI</p>
       </div>
