--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
         <h2>About Me</h2>
         <p>
           I am a third-year Ph.D. student in Computer Science and Engineering at the University of Texas at Arlington.
-          My research focuses on Testing Machine Learning Models and Explainable Artificial Intelligence.
         </p>
-        <p><strong>Research Interests:</strong> Testing Machine Learning Models, XAI, Generative AI</p>
+        <p><strong>Research Interests:</strong> Testing Machine Learning Models, Explainable Artificial Intelligence (XAI), Generative AI</p>
       </div>
     </div>
   </header>
@@ -33,16 +32,16 @@
   <main>
     <h2>News</h2>
     <div class="news-scroll">
-        <strong>Jan 2025:</strong> Paper "Fairness Testing of Machine Learning Models Using Combinatorial Testing in Latent Space" submitted to IWCT 2025.
+        Jan 2025: Paper "Fairness Testing of Machine Learning Models Using Combinatorial Testing in Latent Space" submitted to IWCT 2025.
     </div>
     <div class="news-scroll">
-        <strong>Nov 2024:</strong> Completed my Comprehensive Examination.
+        Nov 2024: Completed my Comprehensive Examination.
     </div>
     <div class="news-scroll">
-        <strong>May 2024:</strong> Completed my Diagnostic Evaluation.
+        May 2024: Completed my Diagnostic Evaluation.
     </div>
     <div class="news-scroll">
-        <strong>Aug 2022:</strong> Started Ph.D. in Computer Science at University of Texas, Arlington.
+        Aug 2022: Started Ph.D. in Computer Science at University of Texas, Arlington.
     </div>
   </main>
 
