--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>
           I am a third-year Ph.D. student in Computer Science and Engineering at the University of Texas at Arlington.
         </p>
-        <p><strong>Research Interests:</strong> Testing Machine Learning Models, Explainable Artificial Intelligence (XAI), Generative AI</p>
+        <p><strong>Research Interests:</strong> Testing Machine Learning Models, XAI, Generative AI</p>
       </div>
     </div>
   </header>
